--- a/.github/workflows/update-badges.yaml
+++ b/.github/workflows/update-badges.yaml
@@ -3,7 +3,7 @@ name: Update Badges
 on:
   schedule:
     # Runs at 2am UTC
-    - cron: "0 2 * * *"
+    - cron: "0 2 * * 1"
   workflow_dispatch:
 jobs:
   update-readme:
